{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 60,
  "lineage": "8012c873-b3b9-d98a-7afe-265fa2bfdef7",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "app-net-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/networkInterfaces/app-network",
            "internal_domain_name_suffix": "w3cjhs0k0n4uzntgaqxjfe3c2e.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "app-webserver",
                "primary": true,
                "private_ip_address": "192.168.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/virtualNetworks/virtualnet01/subnets/app-subnet"
              }
            ],
            "location": "westeurope",
            "name": "app-network",
            "private_ip_address": "192.168.2.4",
            "private_ip_addresses": [
              "192.168.2.4"
            ],
            "resource_group_name": "azure-tier"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.app-subnet",
            "module.networking.azurerm_virtual_network.virtualnet01",
            "module.resourcegroup.azurerm_resource_group.azure-tier-rs"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "web-net-interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/networkInterfaces/web-network",
            "internal_domain_name_suffix": "w3cjhs0k0n4uzntgaqxjfe3c2e.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "web-webserver",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/virtualNetworks/virtualnet01/subnets/web-subnet"
              }
            ],
            "location": "westeurope",
            "name": "web-network",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "azure-tier"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.web-subnet",
            "module.networking.azurerm_virtual_network.virtualnet01",
            "module.resourcegroup.azurerm_resource_group.azure-tier-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/virtualNetworks/virtualnet01/subnets/app-subnet",
            "name": "app-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-tier",
            "virtual_network_name": "virtualnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.virtualnet01",
            "module.resourcegroup.azurerm_resource_group.azure-tier-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "db-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.3.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/virtualNetworks/virtualnet01/subnets/db-subnet",
            "name": "db-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-tier",
            "virtual_network_name": "virtualnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.virtualnet01",
            "module.resourcegroup.azurerm_resource_group.azure-tier-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "web-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "192.168.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/virtualNetworks/virtualnet01/subnets/web-subnet",
            "name": "web-subnet",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "azure-tier",
            "virtual_network_name": "virtualnet01"
          },
          "dependencies": [
            "module.networking.azurerm_virtual_network.virtualnet01",
            "module.resourcegroup.azurerm_resource_group.azure-tier-rs"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "virtualnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "cb9344b7-d34a-4c7d-b666-042e9293a2e4",
            "id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/virtualNetworks/virtualnet01",
            "location": "westeurope",
            "name": "virtualnet01",
            "resource_group_name": "azure-tier"
          },
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-tier-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "location": "westeurope",
            "name": "app-nsg",
            "resource_group_name": "azure-tier",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-tier-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "db-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "location": "westeurope",
            "name": "db-nsg",
            "resource_group_name": "azure-tier",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-2",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.2.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3306",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "ssh-rule-3",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-tier-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "web-nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "location": "westeurope",
            "name": "web-nsg",
            "resource_group_name": "azure-tier",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-1",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "ssh-rule-2",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "192.168.3.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.resourcegroup.azurerm_resource_group.azure-tier-rs"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/virtualNetworks/virtualnet01/subnets/app-subnet",
            "network_security_group_id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/networkSecurityGroups/app-nsg",
            "subnet_id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/virtualNetworks/virtualnet01/subnets/app-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.app-subnet",
            "module.networking.azurerm_virtual_network.virtualnet01",
            "module.resourcegroup.azurerm_resource_group.azure-tier-rs",
            "module.securitygroup.azurerm_network_security_group.app-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "db-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/virtualNetworks/virtualnet01/subnets/db-subnet",
            "network_security_group_id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/networkSecurityGroups/db-nsg",
            "subnet_id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/virtualNetworks/virtualnet01/subnets/db-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.db-subnet",
            "module.networking.azurerm_virtual_network.virtualnet01",
            "module.resourcegroup.azurerm_resource_group.azure-tier-rs",
            "module.securitygroup.azurerm_network_security_group.db-nsg"
          ]
        }
      ]
    },
    {
      "module": "module.securitygroup",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "web-nsg-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/virtualNetworks/virtualnet01/subnets/web-subnet",
            "network_security_group_id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/networkSecurityGroups/web-nsg",
            "subnet_id": "/subscriptions/d57b17c6-c6ae-4051-919f-6f86ca9b0684/resourceGroups/azure-tier/providers/Microsoft.Network/virtualNetworks/virtualnet01/subnets/web-subnet"
          },
          "dependencies": [
            "module.networking.azurerm_subnet.web-subnet",
            "module.networking.azurerm_virtual_network.virtualnet01",
            "module.resourcegroup.azurerm_resource_group.azure-tier-rs",
            "module.securitygroup.azurerm_network_security_group.web-nsg"
          ]
        }
      ]
    }
  ]
}